--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
+    "cookie-parser": "^1.4.7",
     "firebase": "^11.10.0",
     "lottie-react": "^2.4.1",
     "motion": "^12.23.0",
